[project]
name = "telegram-bot"
version = "0.1.0"
description = "Example Telegram bot project."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gputil>=1.4.0",
    "python-dotenv>=1.2.1",
    "python-telegram-bot[http2]>=22.5",
    "requests>=2.28.1",
    "torch",
    "torchvision",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.black]
line-length = 120
target-version = ['py313']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
